--- a/index.Rmd
+++ b/index.Rmd
@@ -62,8 +62,8 @@ library(ggmap)
 ```
 
 ```{r}
-nyc.map <- get_map(location = "Lower Manhattan, New York City", zoom = 15, maptype = "roadmap")
-ggmap(nyc.map)
+nyc.map <- get_map(location = "New York City", zoom = 10, maptype = "roadmap")
+nyc.map <- ggmap(nyc.map)
 ```
 
 different types of map available: “terrain”, “satellite”, “roadmap”, “hybrid”
@@ -74,12 +74,64 @@ different types of map available: “terrain”, “satellite”, “roadmap”,
 library(tidyverse)
 X2019_2020_School_Point_Locations <- read_csv("raw/2019_-_2020_School_Point_Locations.csv")
 
-
 ### using the first column to identify school locations 
-
-
+head(X2019_2020_School_Point_Locations)
+```
+```{r}
+#filter out schools with GT option
+merged <- read_csv("raw/merged.csv")
+merged_gf <- merged %>% filter(gifted == 1)
+head(merged)
 ```
 
+```{r}
+library(dplyr)
+
+gf_combined <- na.omit(X2019_2020_School_Point_Locations %>% 
+                         left_join(merged_gf, by = c("Loc_Name"= "School Name")) %>%
+                         select(c("the_geom","Loc_Name","DBN")))
+
+head(gf_combined)
+```
+```{r}
+v=c()
+worddetect <- function(x){
+  for (i in 1:length(x)){
+    v = append(v,strsplit(x[i],"")[[1]][3])
+  }
+  v
+}
+
+a = worddetect(gf_combined$DBN)
+gf_combined$Borough <- a
+head(gf_combined)
+```
+
+
+
+```{r}
+x <- str_extract(gf_combined$the_geom,"(?<=\\().*(?=\\))")
+x <- unlist(strsplit(x," "))
+```
+
+```{r}
+odd <- seq(1,201,2)
+even <- seq(2,202,2)
+long <- c()
+lat <- c()
+
+for (i in 1:101){
+  long[i] <- x[odd[i]]
+  lat[i] <- x[even[i]]
+}
+gf_combined$long <- as.numeric(long)
+gf_combined$lat <- as.numeric(lat)
+gf_combined
+
+```
+```{r}
+nyc.map+geom_point(aes(x=long,y=lat,colour = Borough),data = gf_combined,size=0.7)
+```
 
 
 
