--- a/index.Rmd
+++ b/index.Rmd
@@ -8,53 +8,6 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-## Map practice TEST
-
-Small test
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE, message=FALSE, warning=FALSE}
-#install.packages(c("cowplot", "googleway", "ggplot2", "ggrepel", 
-#"ggspatial", "libwgeom", "sf", "rnaturalearth", "rnaturalearthdata"))
-
-library("ggplot2")
-theme_set(theme_bw())
-library("sf")
-
-library("rnaturalearth")
-library("rnaturalearthdata")
-
-world <- ne_countries(scale = "medium", returnclass = "sf")
-class(world)
-```
-
-```{r, echo=FALSE}
-ggplot(data = world) +
-    geom_sf()
-
-ggplot(data = world) +
-    geom_sf() +
-    xlab("Longitude") + ylab("Latitude") +
-    ggtitle("World map", subtitle = paste0("(", length(unique(world$NAME)), " countries)"))
-
-ggplot(data = world) + 
-    geom_sf(color = "black", fill = "lightgreen")
-
-ggplot(data = world) +
-    geom_sf(aes(fill = pop_est)) +
-    scale_fill_viridis_c(option = "plasma", trans = "sqrt")
-
-
-sites <- data.frame(longitude = c(-80.144005, -80.109), latitude = c(26.479005, 
-    26.83))
-ggplot(data = world) +
-    geom_sf() +
-    geom_point(data = sites, aes(x = longitude, y = latitude), size = 4, 
-        shape = 23, fill = "darkred") +
-    coord_sf(xlim = c(-87, -50), ylim = c(24.5, 33), expand = FALSE)
-```
-
 #Plot out NYC
 ```{r}
 library(ggplot2)
@@ -65,9 +18,6 @@ library(ggmap)
 nyc.map <- get_map(location = "New York City", zoom = 10, maptype = "roadmap")
 nyc.map <- ggmap(nyc.map)
 ```
-
-different types of map available: “terrain”, “satellite”, “roadmap”, “hybrid”
-
 # import the latitude data
 
 ```{r}
@@ -79,7 +29,7 @@ head(X2019_2020_School_Point_Locations)
 ```
 ```{r}
 #filter out schools with GT option
-merged <- read_csv("raw/merged.csv")
+merged <- read_csv("data/merged.csv")
 merged_gf <- merged %>% filter(gifted == 1)
 head(merged)
 ```
