--- a/index.Rmd
+++ b/index.Rmd
@@ -14,10 +14,6 @@ library(ggplot2)
 library(ggmap)
 ```
 
-```{r}
-nyc.map <- get_map(location = "New York City", zoom = 10, maptype = "roadmap")
-nyc.map <- ggmap(nyc.map)
-```
 # import the latitude data
 
 ```{r}
@@ -30,41 +26,34 @@ head(X2019_2020_School_Point_Locations)
 ```{r}
 #filter out schools with GT option
 merged <- read_csv("data/merged.csv")
-merged_gf <- merged %>% filter(gifted == 1)
 head(merged)
+nrow(merged)
+merged_gf <- merged %>% filter(gifted == 1)
+head(merged_gf)
 ```
 
 ```{r}
 library(dplyr)
+merged_combined <- na.omit(X2019_2020_School_Point_Locations %>% 
+                         left_join(merged, by = c("Loc_Name"= "School Name")) %>%
+                         select(c("the_geom","Loc_Name","DBN","borough","Economic Need Index")))
+head(merged_combined)
 
 gf_combined <- na.omit(X2019_2020_School_Point_Locations %>% 
                          left_join(merged_gf, by = c("Loc_Name"= "School Name")) %>%
-                         select(c("the_geom","Loc_Name","DBN")))
+                         select(c("the_geom","Loc_Name","DBN","borough","Economic Need Index")))
 
 head(gf_combined)
 ```
-```{r}
-v=c()
-worddetect <- function(x){
-  for (i in 1:length(x)){
-    v = append(v,strsplit(x[i],"")[[1]][3])
-  }
-  v
-}
-
-a = worddetect(gf_combined$DBN)
-gf_combined$Borough <- a
-head(gf_combined)
-```
-
-
 
 ```{r}
+#change the_geom to separate columns of long and lat data
 x <- str_extract(gf_combined$the_geom,"(?<=\\().*(?=\\))")
 x <- unlist(strsplit(x," "))
 ```
 
 ```{r}
+#Extract long+lat data
 odd <- seq(1,201,2)
 even <- seq(2,202,2)
 long <- c()
@@ -77,10 +66,45 @@ for (i in 1:101){
 gf_combined$long <- as.numeric(long)
 gf_combined$lat <- as.numeric(lat)
 gf_combined
-
 ```
 ```{r}
-nyc.map+geom_point(aes(x=long,y=lat,colour = Borough),data = gf_combined,size=0.7)
+#change the_geom to separate columns of long and lat data
+y <- str_extract(merged_combined$the_geom,"(?<=\\().*(?=\\))")
+y <- unlist(strsplit(y," "))
+y
+```
+```{r}
+#Extract long+lat data
+odd <- seq(1,2205,2)
+even <- seq(2,2206,2)
+long <- c()
+lat <- c()
+
+for (i in 1:1105){
+  long[i] <- y[odd[i]]
+  lat[i] <- y[even[i]]
+}
+merged_combined$long <- as.numeric(long)
+merged_combined$lat <- as.numeric(lat)
+merged_combined
+```
+
+```{r}
+merged_plot <- merged_combined %>% mutate(across(where(is.numeric), ~ round(., 3))) %>% select(borough,"Economic Need Index",long,lat)
+names(merged_plot)[2] <- "ENI"
+merged_plot$ENI <- merged_plot$ENI*100
+merged_plot <- na.omit(merged_plot)
+merged_plot
+```
+```{r}
+nyc.map <- get_map(location = "Bronx, New York City", zoom = 10, maptype = "roadmap")
+ggmap(nyc.map, extend = "device", darken = 0.3) +
+  stat_density2d(aes(x = long, y = lat, fill = ..level.., alpha = ..level..),
+                 data = merged_plot, geom = "polygon", bins = 10) +
+  scale_fill_gradient2(low = "red", mid = "blue", high = "firebrick2", midpoint = 80,
+                       guide = guide_colorbar(title = "Level")) +
+  theme_void()+
+  geom_point(aes(x=long,y=lat,color=borough),data = gf_combined,size=0.7)
 ```
 
 
